--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.4",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
